--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kishan Shinde - Portfolio</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
     <header>
         <div class="topnav" id="myTopnav">
-            <span class="logo">Kishan Shinde</span>
+            <span class="logo">Nila A S</span>
             <div class="nav-links">
                 <a href="#home">Home</a>
                 <a href="#portfolio">Portfolio</a>
@@ -27,9 +27,9 @@
     <main>
         <section id="home" class="hero">
             <div class="hero-content">
-                <h1>Hello, I'm <span class="name-highlight">Kishan Shinde</span></h1>
+                <h1>Hello, I'm <span class="name-highlight">Nila A S</span></h1>
                 <h2 class="profession">
-                    <span class="typed-text">Web Developer</span>
+                    <span class="typed-text">Innovator </span>
                 </h2>
                 <p class="intro">A passionate creator turning ideas into digital experiences.</p>
                 
@@ -105,10 +105,9 @@
                 <a href="#" class="social-icon" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
                 <a href="#" class="social-icon" aria-label="GitHub"><i class="fab fa-github"></i></a>
                 <a href="#" class="social-icon" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                <a href="#" class="social-icon" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                <a href="#" class="social-icon" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
+            
             </div>
-            <p>&copy; 2024 Kishan Shinde. All Rights Reserved.</p>
+            <p>&copy; 2024 Nila A S. All Rights Reserved.</p>
             <div class="footer-links">
                 <a href="#">Privacy Policy</a>
                 <a href="#">Terms of Service</a>
